--- a/tv/Makefile
+++ b/tv/Makefile
@@ -7,5 +7,5 @@ run4:
 	./isp -i example_S9P.raw -o output.yuv -c hls_param4.txt
 
 clean:
-	rm tpg_out.raw dgain_out.raw lsc_out.raw dpc_out.raw rawdns_out.raw wbc_out.raw gb_out.raw demosaic_out.rgbh ee_out.rgbh cmc_out.rgb gtm_out.rgb ltm_out.rgb cac_out.rgb csc_out.yuv yfc_out.yuv yuvdns_out.yuv scaledown_out.yuv crop_out.yuv crop_out_packed.yuv output.yuv
+	rm tpg_out.raw dgain_out.raw lsc_out.raw dpc_out.raw rawdns_out.raw wbc_out.raw gb_out.raw demosaic_out.rgbh ee_out.rgbh fcr_out.rgbh cmc_out.rgb aec_out.rgb gtm_out.rgb dehaze_out.rgb lut_out.rgb ltm_out.rgb cac_out.rgb csc_out.yuv yfc_out.yuv sde_out.yuv yuvdns_out.yuv scaledown_out.yuv crop_out.yuv crop_out_packed.yuv output.yuv
 
